# NeuralNetwork

./: CMakeLists.txt  README.md  build.bat  connection.cpp  connection.h  gene.h  genetic_algorithm.h  genome.cpp  genome.h  include.h  main.cpp  neat.cpp  neat.h  neural_network.h  node.cpp  node.h  random_selector.h  random_unordered_set.h
src/: activations.h  layer.cpp  layer.h  loss.h  main.cpp  neural_network.cpp  neural_network.h  optimizers.cpp  optimizers.h  random.h
